Fixed background image not displaying.

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 	background-color: #ffffff;
 	border-color: #dddddd;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	background-image: url(../images/ep_naturalwhite.png);
+	background-image: url(/images/concrete_seamless.png);
 	line-height: 150%;
 }
 
